load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
#load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")

package(default_visibility = ["//visibility:public"])

#go_grpc_library(
#    name = "go_example_proto_lib",
#    protos = ["//messages:example_messages"],
#)

#go_library(
#    name = "server_default_lib",
#    srcs = ["main.go"],
#    deps = [
#        ":go_example_proto_lib",
#        #        "@com_github_golang_protobuf//proto:go_default_library",
#        #        "@org_golang_google_grpc//:go_default_library",
#        #        "@org_golang_google_grpc//codes:go_default_library",
#        #        "@org_golang_google_grpc//credentials:go_default_library",
#    ],
#)

go_binary(
    name = "server",
    srcs = ["main.go"],
    #    embed = [":server_default_lib"],
)
